--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+### Custom additions ###
+src/{{ python_project_name }}/_version.py
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
