No newline in endif at the end of CONTRIBUTING template

--- a/template/CONTRIBUTING.md.jinja
+++ b/template/CONTRIBUTING.md.jinja
@@ -40,4 +40,4 @@ Example](https://stackoverflow.com/help/minimal-reproducible-example).
 Feel free to request features on the [Issue Tracker]({{ project_bug_tracker }}).
 {% else %}
 Feel free to request features on the Issue Tracker.
-{% endif %}
+{% endif -%}
