TODO about dependencies in pyproject.toml template

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -18,6 +18,7 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   {%- endif %}
 ]
+{# TODO: Add dependencies section #}
 dyamic = ["version"]
 {% if project_homepage != "" or project_source_repository != "" or project_bug_tracker != "" %}
 [project.urls]
