Fix typo (dyamic -> dynamic)

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -17,7 +17,7 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   {%- endif %}
 ]
-dyamic = ["version"]
+dynamic = ["version"]
 {% if project_homepage != "" or project_source_repository != "" or project_bug_tracker != "" %}
 [project.urls]
 {% if project_homepage %}"Homepage" = "{{ project_homepage }}"
