Add index to links in docs

--- a/template/docs/index.md.jinja
+++ b/template/docs/index.md.jinja
@@ -8,14 +8,14 @@
 :maxdepth: 2
 :caption: User Guide
 
-installation
+installation/index
 ```
 
 ```{toctree}
 :maxdepth: 2
 :caption: Tutorials
 
-tutorials/getting-started
+tutorials/getting-started/index
 ```
 
 ## Authors & license
