Add empty dependencies to template

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -18,6 +18,8 @@ classifiers = [
   {%- endif %}
 ]
 dynamic = ["version"]
+dependencies = [
+]
 {% if project_homepage != "" or project_source_repository != "" or project_bug_tracker != "" %}
 [project.urls]
 {% if project_homepage %}"Homepage" = "{{ project_homepage }}"
