Pytest importlib setting

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -58,3 +58,8 @@ exclude = []
 [tool.ruff.isort]
 known-first-party = ["{{ python_project_name }}"]
 combine-as-imports = true
+
+[tool.pytest.ini_options]
+addopts = [
+  "--import-mode=importlib",
+]
